# dogsAPI

./: README.md  commands.txt  dogs.json  main.py  pyproject.toml  test_main.http
.github/workflows/: python.yml
app/: dogs.json  main.py  pyproject.toml  test_dogs.py  test_main.http
app/tests/: test_dogs.py
