[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dog-breeds-api"
version = "1.0.0"
description = "A robust FastAPI CRUD API for managing dog breed data."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Joseph Adogeri"}]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
# Tells pytest where to look for tests and includes the root in the path
testpaths = ["tests", "app"] 
pythonpath = ["."]
